Crash on deleting curve handle with hook modifier #44497

Closed
opened 2015-04-23 14:46:45 +02:00 by Marcus Richter · 13 comments

System Information
Windows 8 64 bit
8 core CPU
GTX 660ti
24Gb DDR3 RAM

Blender Version
Broken: Windows 2.74 official 64bit and newest development build from builder.blender.org
Worked: Worked somewhat on Linux, though still unstable (thanks to Stan_Pancakes for testing)

Short description of error
In the .blend file I made a curve with one handle (the middle one) hooked (ctrl+h) onto an empty.
Entering Edit mode, deleting the outer curve handle with no hook and then the hooked handle and leaving the handle in the origin point will make it crash either when:

  • clicking the delete action
  • returning to Object Mode
  • re-entering Edit Mode

Sometimes it also crashes when deleting the hooked handle and leaving the other two handles connected, returning to Object Mode, reentering Edit Mode, undoing action and then returning to Object Mode
Clearer explanation below :)

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Crash case 1:
1: On curve object, enter Edit Mode
2: Delete outer curve handle that is not in the origin point
3: Delete middle curve handle which is hooked onto the circle empty (crash?)
4: Return to Object Mode (crash?)
5: Re-enter Edit Mode (crash)

Crash case 2:
1: On curve object, enter Edit Mode
2: Delete middle curve handle which is hooked onto the circle empty
3: Return to Object Mode
4: Re-enter Edit Mode
5: Ctrl+Z undo the deletion of the middle curve handle
6: Return to Object Mode (crash)

I can replicate this problem completely on a new .blend with only the curve object and empty in it

**System Information** Windows 8 64 bit 8 core CPU GTX 660ti 24Gb DDR3 RAM **Blender Version** Broken: Windows 2.74 official 64bit and newest development build from builder.blender.org Worked: Worked somewhat on Linux, though still unstable (thanks to Stan_Pancakes for testing) **Short description of error** In the .blend file I made a curve with one handle (the middle one) hooked (ctrl+h) onto an empty. Entering Edit mode, deleting the outer curve handle with no hook and then the hooked handle and leaving the handle in the origin point will make it crash either when: - clicking the delete action - returning to Object Mode - re-entering Edit Mode Sometimes it also crashes when deleting the hooked handle and leaving the other two handles connected, returning to Object Mode, reentering Edit Mode, undoing action and then returning to Object Mode Clearer explanation below :) **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Crash case 1: 1: On curve object, enter Edit Mode 2: Delete outer curve handle that is not in the origin point 3: Delete middle curve handle which is hooked onto the circle empty (crash?) 4: Return to Object Mode (crash?) 5: Re-enter Edit Mode (crash) Crash case 2: 1: On curve object, enter Edit Mode 2: Delete middle curve handle which is hooked onto the circle empty 3: Return to Object Mode 4: Re-enter Edit Mode 5: Ctrl+Z undo the deletion of the middle curve handle 6: Return to Object Mode (crash) I can replicate this problem completely on a new .blend with only the curve object and empty in it
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mstuff

Added subscriber: @mstuff
Author

I forgot to add the .blend file :)10840.blend

A bit silly that I can't edit the report

I forgot to add the .blend file :)[10840.blend](https://archive.blender.org/developer/F166243/10840.blend) A bit silly that I can't edit the report
Author

Also, Stan_Pancakes tested all the steps above and found that his system crashes just like mine - No difference in Windows or Linux

Also, Stan_Pancakes tested all the steps above and found that his system crashes just like mine - No difference in Windows or Linux

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Indeed (Stan_Pancakes being me), tested on 64-bit Linux with both 2.74 and 2.74-ecb3362, crashes as described.

Indeed (Stan_Pancakes being me), tested on 64-bit Linux with both 2.74 and 2.74-ecb3362, crashes as described.

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, I'm checking it out

Confirmed, I'm checking it out
Antonis Ryakiotakis self-assigned this 2015-04-23 16:06:29 +02:00

Nice catch, too separate issues too.

Nice catch, too separate issues too.

Added subscriber: @Sergey

Added subscriber: @Sergey

Second issue is out of bounds issue, it's easy to make it not crash but fixing it loses the indices to the hook - hook won't work anymore.

First issue is a race condition from depsgraph, @Sergey may want to take a look.

Second issue is out of bounds issue, it's easy to make it not crash but fixing it loses the indices to the hook - hook won't work anymore. First issue is a race condition from depsgraph, @Sergey may want to take a look.

This issue was referenced by 4ffcc6ff56

This issue was referenced by 4ffcc6ff56b60d1cc69e12a80c9c2cacd604688f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44497
No description provided.