Fix second crashing part of T44497, out of bounds access to hook modifier data.

Unfortunately seems like we also lose the hook mapping by doing this,
but this can be fixed later and is probably a separate issue.